[gd_scene load_steps=4 format=3 uid="uid://b4ni5isvsueow"]

[ext_resource type="Script" uid="uid://b2b1s1bme88ip" path="res://GameModules/Input/mobile_controls.gd" id="1_hpk0g"]

[sub_resource type="Theme" id="Theme_hpk0g"]

[sub_resource type="Theme" id="Theme_rkgx5"]

[node name="MobileControls" type="CanvasLayer"]
script = ExtResource("1_hpk0g")

[node name="JoystickBase" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.3)
custom_minimum_size = Vector2(120, 120)
anchors_preset = -1
anchor_top = 0.83300006
anchor_right = 0.094000004
anchor_bottom = 1.0
offset_top = 0.2399292
offset_right = -0.32000732
grow_vertical = 0
theme = SubResource("Theme_hpk0g")
metadata/_edit_use_anchors_ = true

[node name="JoystickHandle" type="Panel" parent="JoystickBase"]
self_modulate = Color(1, 1, 1, 0.6)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.333
anchor_right = 0.66700006
anchor_bottom = 0.66700006
offset_left = 0.040000916
offset_top = 0.040000916
offset_right = -0.040008545
offset_bottom = -0.040008545
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rkgx5")
metadata/_edit_use_anchors_ = true
